# fluent

./: .gitignore  .pre-commit-config.yaml  CPPLINT.cfg  FLEXBISON.md  README.md  TODO.md  TODO.txt  TOOLCHAIN.md  archive  build  build.bat  gen-build-date.bat  gen-lex-parse  gen-lex-parse.bat  genfiles  genfiles.bat
examples/: fib.fl  fizzbuzz.fl  loop.fl  scopes.fl  sequence.fl  test_calc_coercion.fl  test_commands.fl  test_cond_1.fl  test_cond_1_err.fl  test_cond_1_ok.fl  test_cond_2.fl  test_cond_2_err.fl  test_cond_2_ok.fl  test_cond_3.fl  test_cond_3_bug.fl  test_cond_4.fl  test_cond_5.fl  test_cond_6.fl  test_cond_6_bug.fl  test_cond_7.fl  test_cond_8.fl  test_modulo.fl  test_print_simple.fl  test_print_stream.fl  test_while_1.fl  test_while_2.fl  test_while_3.fl
interpreter/: --build  --build.bat  --clean  --clean.bat  --install  --run  --run.bat  CMakeLists.txt
interpreter/inc_win/: unistd.h
interpreter/src/: console.cpp  console.hpp  context.cpp  context.hpp  interpreter.cpp  lexer.hpp  lexer.l  logger.cpp  logger.hpp  node.cpp  node.hpp  opcode_map.cpp  opcode_templates.hpp  opcode_tests.cpp  opcodes.cpp  opcodes.hpp  parser.y
lexer/: CMakeLists.txt  TODO.md  build.bat  gen-build.bat  gen-flex.bat  gen.bat  generate  lexer  lexer-test  lexer-test.bat  lexer.bat  rebuild.bat  set-env.bat
lexer/src/: lex.yy.cc  lexer.cpp  lexer.l  lexer_macros.h  lexer_macros.hpp  main.cpp  scanner.cpp  scanner.hpp
lexer/tests/: expected-01.txt  input-01.txt  input-02.txt  output-01.txt
samples/: calc.f  calc2.f  calc3.f  cond.f  func.f  test_console.f
scripts/: build  build.bat  extension-install  extension-remove  format  format.bat  gen-build-date.bat  generate-cmake.bat  generate-lexparse  generate-lexparse.bat  generate.bat  genfiles  genfiles.bat  install-vscode  lint  requirements.txt  tbuild  test-cond  test-scripts
src/: CMakeLists.txt  build_date.hpp  command.hpp  console.cpp  console.h  console.hpp  context.cpp  context.h  context.hpp  driver.cpp  driver.hpp  functions.cpp  functions.h  lexeme.hpp  lexer.h  lexer.l  logger.cpp  logger.h  logger.hpp  logging.h  main.cpp  node.cpp  node.h  node.hpp  opcode_map.cpp  opcode_templates.h  opcode_templates.hpp  opcode_tests.cpp  opcodes.cpp  opcodes.h  opcodes.hpp  parser.y  parser.yy  scanner.hpp  statement.cpp  statement.h  var.cpp  var.h  yyerror.cpp
syntax-fluent/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
syntax-fluent/syntaxes/: fluent.tmLanguage.json
vs/: fluent.sln
vs2015/: fluent.sln  fluent.vcxproj  fluent.vcxproj.filters
vs2019/: fluent.sln  fluent.vcxproj  fluent.vcxproj.filters
vscode-fluentlang-0.0.1/: package.json
vscode-fluentlang-0.0.1/syntaxes/: fluent.json
